SUBDIRS = init.d

FILES_FLASH_RO = \
	fstab host.conf inetd.conf inittab issue.net mime.types \
	nsswitch.conf profile protocols rpc services termcap timezone.xml \
	vsftpd.conf
FILES_FLASH_RW_LINK = \
	exports group hostname hosts localtime passwd resolv.conf smb.conf

DIR = /etc



include $(top_srcdir)/root/Makefile.inc

